--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "lucide-react": "^0.376.0",
     "nanoid": "^5.0.7",
     "next": "^14.2.1",
+    "next-themes": "^0.3.0",
     "postgres": "^3.4.3",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
