--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "next-themes": "^0.3.0",
     "postgres": "^3.4.3",
     "react": "18.2.0",
-    "react-confetti": "^6.1.0",
+    "react-canvas-confetti": "^2.0.7",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "sonner": "^1.4.41",
