--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "@nivo/core": "^0.87.0",
-    "@nivo/line": "^0.87.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
@@ -33,6 +31,7 @@
     "react-canvas-confetti": "^2.0.7",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
+    "recharts": "^2.12.7",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
