--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "db:studio": "drizzle-kit studio",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "prettier": "prettier . --w"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
