--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prettier": "prettier . --w"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.5.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
