--- a/package.json
+++ b/package.json
@@ -10,7 +10,19 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
-    "prettier": "prettier . --w"
+    "prettier": "prettier . --w",
+    "prepare": "husky"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged":{
+    "**/*.{js,jsx,ts,tsx}":[
+      "npx prettier --write",
+      "npx eslint --fix"
+    ]
   },
   "dependencies": {
     "@clerk/nextjs": "^5.5.5",
@@ -51,6 +63,8 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.3",
     "eslint-plugin-drizzle": "^0.2.3",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
     "pg": "^8.11.3",
     "postcss": "^8.4.34",
     "prettier": "^3.2.5",
