--- a/package.json
+++ b/package.json
@@ -33,19 +33,19 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@vercel/postgres": "^0.10.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "drizzle-orm": "^0.29.4",
     "lucide-react": "^0.376.0",
     "nanoid": "^5.0.7",
-    "next": "^14.2.1",
+    "next": "^14.2.13",
     "next-themes": "^0.3.0",
-    "postgres": "^3.4.3",
-    "react": "18.2.0",
+    "postgres": "^3.4.4",
+    "react": "18.3.1",
     "react-canvas-confetti": "^2.0.7",
     "react-day-picker": "^8.10.1",
-    "react-dom": "18.2.0",
+    "react-dom": "18.3.1",
     "recharts": "^2.12.7",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
@@ -60,9 +60,10 @@
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
-    "drizzle-kit": "^0.20.14",
+    "drizzle-kit": "^0.26.2",
+    "drizzle-orm": "^0.35.3",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.3",
+    "eslint-config-next": "^14.2.13",
     "eslint-plugin-drizzle": "^0.2.3",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
