--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
     "drizzle-orm": "^0.29.4",
     "lucide-react": "^0.376.0",
     "nanoid": "^5.0.7",
